--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ nav{
     box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.288);
 }
 
-nav button{
+button{
     font-size: clamp(16px, 1.9vw, 32px);
     width: fit-content;
     padding: 1em 1em;
@@ -77,19 +77,19 @@ nav button{
     border-radius: 10px;
 }
 
-nav button:hover{
+button:hover{
     padding: 1.2em 1.5em;
     color: var(--accent);
     background-color: white;
 }
 
-nav button.active{
+button.active{
     background-color: var(--accent);
     color: black;
     box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.356);
 }
 
-form{
+.setting-form{
     margin: 0 auto;
     padding: 1em;
     border-radius: 10px;
@@ -97,17 +97,42 @@ form{
     text-align: center;
     margin-top: 1em;
     color: white;
+    display: none;
     background-color: var(--dark-bg);
 }
-#speedContainer{
+.setting-form.visible{
+    display: block;
+}
+#content-dropdown {
+    width: 25vw;
+    position: relative;
+    padding: .75em 0;
+    background-color: var(--light-bg);
+    border: none;
+    font-size: 1.25rem;
+    color: white;
+}
+
+.slider-container{
     margin-top: .5em;
     display: grid;
-    grid-template-columns: 3ch 1fr 6ch;
     gap: 1em;
+}
+input[type=range]{
+    width: 50vw;
+    max-width: 400px;
+}
+#sortContainer {
+    display: grid;
+    width: 50vw;
+    max-width: 300px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
+    place-items: center;
 }
 
 
-#instructions{
+.instructions{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -120,24 +145,24 @@ form{
     font-size: .75rem;
     padding: 0 .2em;
 }
-#instructions div{
+.instructions div{
     display: none;
 }
-#instructions.visible  {
+.instructions.visible  {
     display: flex;
 }
-#instructions div.visible{
+.instructions div.visible{
     display: block;
 }
 
-#instructions h1{
+.instructions h1{
     font-size: 2rem;
     position: relative;
     top: -50px;
     text-decoration: underline;
 }
 
-#instructions h2:last-child{
+.instructions h2:last-child{
     position: relative;
     top: 50px;
     color: var(--accent);
@@ -168,14 +193,17 @@ figure{
     background: radial-gradient(var(--secondary-bg), var(--primary-bg));
     width: 90vw;
     min-height: 85vh;
-    margin: 4em auto;
-    /* margin-top: 4em; */
-    display: flex;
+    margin: 2em auto;
+    /* margin-bottom: 4em; */
+    display: none;
     flex-direction: column;
     align-items: center;
     position: relative;
     overflow-y: scroll;
     box-shadow:  0px 3px 10px 5px rgba(0, 0, 0, 0.301);
+}
+figure.visible{
+    display: flex;
 }
 figure::-webkit-scrollbar{
     display: none;
